gitops/apps/envoy-gateway-resources/httproute-taskchampion.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: taskchampion
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "taskchampion.homelab.local"
  rules:
  - backendRefs:
    - name: taskchampion-sync-server
      namespace: taskchampion
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: taskchampion-backend
  namespace: taskchampion
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: envoy-gateway-system
  to:
  - group: ""
    kind: Service
    name: taskchampion-sync-server
